# robotiq_2f_urcap_adapter

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE.txt  README.md  package.xml  setup.cfg  setup.py
.github/workflows/: ici.yml
action/: GripperCommand.action  MoveGripper.action
launch/: robotiq_2f140_urcap_adapter_launch.py  robotiq_2f85_urcap_adapter_launch.py
msg/: GripperCommand.msg
robotiq_2f85_urcap_adapter/: __init__.py  robotiq_2f85_adapter.py  robotiq_2f85_socket_adapter.py  urcap_adapter.py
robotiq_2f85_urcap_adapter_socket/: robotiq_2f85_socket_adapter.py
robotiq_2f_urcap_adapter_socket/: robotiq_2f_socket_adapter.py
scripts/: robotiq_2f85_adapter_node.py  robotiq_2f_adapter_node.py
